# nlp-day-4

./: EXPERIMENT_GUIDE.md  README.md  __init__.py  experiment_results.csv  experiment_summary.txt  pyproject.toml  requirements.txt
app/: app.py  build_index.py  gemini.py  gpt.py  openai_experiment.py  prepare_data.py  prompts.py
data/: answers.json  benchmark_mlqa_vi.csv  benchmark_mlqa_vi_test.csv  benchmark_viquad_v2.csv  benchmark_xquad_vi.csv  qa_viquad.csv  questions.json
results/: results_mlqa_vi.csv  results_mlqa_vi_test.csv  results_viquad_v2_train.csv  results_xquad_vi.csv  summary_mlqa_vi.txt  summary_mlqa_vi_test.txt  summary_viquad_v2.txt  summary_viquad_v2_train.txt  summary_xquad_vi.txt
